@@ -118,7 +118,6 @@
     <string name="msg_master_delete_usage">Cette %1$s est toujours utilisé</string>
     <string name="msg_item_marked_as_done">Élément marqué comme terminé</string>
     <string name="msg_item_marked_as_undone">Élément marqué comme non terminé</string>
-    <string name="msg_batch_no_products">Aucun nouveau produit à créer</string>
     <!-- %1$s is an amount, %2$s a quantity unit, %3$s a product name, %4$s a due date, %5$s a price, %6$s a store and %7$s is a location -->
     <string name="msg_quick_mode_confirm_purchase">Transaction qui sera exécutée: \n\nAjouter %1$s %2$sde %3$s au stock\nDate de péremption: %4$s\nPrix: %5$s\nMagasin: %6$s\nEmplacement: %7$s</string>
     <!-- %1$s is an amount, %2$s a quantity unit, %3$s a product name, %4$s is a location-->
