@@ -118,7 +118,6 @@
     <string name="msg_master_delete_usage">%1$s זה עדיין בשימוש</string>
     <string name="msg_item_marked_as_done">פריט סומן כמושלם</string>
     <string name="msg_item_marked_as_undone">פריט סומן לטיפול</string>
-    <string name="msg_batch_no_products">לא נוצרו מוצרים חדשים</string>
     <!-- %1$s is an amount, %2$s a quantity unit, %3$s a product name, %4$s a due date, %5$s a price, %6$s a store and %7$s is a location -->
     <string name="msg_quick_mode_confirm_purchase">ההעברה שתתבצע:\n\nהוספת %1$s%2$s של %3$s למלאי\nמועד תפוגה: %4$s\nמחיר: %5$s\nחנות: %6$s\nמיקום: %7$s</string>
     <!-- %1$s is an amount, %2$s a quantity unit, %3$s a product name, %4$s is a location-->
