@@ -121,7 +121,6 @@
     <string name="msg_master_delete_usage">This %1$s is still in use</string>
     <string name="msg_item_marked_as_done">Marked item as done</string>
     <string name="msg_item_marked_as_undone">Marked item as undone</string>
-    <string name="msg_batch_no_products">No new products have to be created</string>
     <!-- %1$s is an amount, %2$s a quantity unit, %3$s a product name, %4$s a due date, %5$s a price, %6$s a store and %7$s is a location -->
     <string name="msg_quick_mode_confirm_purchase">Transaction which will be executed:\n\nAdd %1$s %2$s of %3$s to stock\nDue date: %4$s\nPrice: %5$s\nStore: %6$s\nLocation: %7$s</string>
     <!-- %1$s is an amount, %2$s a quantity unit, %3$s a product name, %4$s is a location-->
