@@ -2,6 +2,7 @@
 - New: 'Scan mode' is now 'Quick mode' (#332)
 - Improved: New typeface
 - Improved: Updated translations
+- Fixed: Don't show inactive products on consume & purchase page (#382)
 
 2.0.0-alpha05
 - Improved: Language selection and behavior
